--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Hello Welcome to rails Sample Application of !!!!</h1>
+<div class="page-header"><h1>Hello Welcome to rails Sample Application of !!!!</h1></div>
 <%= link_to 'My Blog', controller: 'articles' %>
