--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,23 +1,27 @@
-<h1>Listing articles</h1>
+<h3>Listing articles</h3>
 
-<table>
+<table class="table table-bordered">
   <tr>
     <th>Title</th>
     <th>Text</th>
+    <th>View</th>
+    <th>Alter</th>
+    <th>Remove</th>
   </tr>
 
   <% @article.each do |article| %>
   <tr>
     <td><%= article.title %></td>
     <td><%= article.text %></td>
-    <td><%= link_to 'Show', article_path(article) %></td>
-    <td><%= link_to 'Edit', edit_article_path(article) %></td>
+    <td><%= link_to 'Show', article_path(article), class: 'btn btn-primary btn-xs' %></td>
+    <td><%= link_to 'Edit', edit_article_path(article), class: 'btn btn-info btn-xs' %></td>
     <td><%= link_to 'Destroy', article_path(article),
                     method: :delete,
-                    data: { confirm: 'Are you sure?' } %></td>
+                    data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-xs' %></td>
   </tr>
   <% end %>
  </table>
 
 <p>To create your own new article , click on</p>
-<%= link_to 'New article', new_article_path %>
+<%= link_to 'New article', new_article_path, class: 'btn btn-primary'%>
+
