--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,12 +1,10 @@
-<p>
-  <strong>Title:</strong>
-  <%= @article.title %>
-</p>
-
-<p>
-  <strong>Text:</strong>
-  <%= @article.text %>
-</p>
+<h3>Saved Article</h3>
+<div class="panel panel-default">
+  <div class="panel-heading"><%= @article.title %></div>
+  <div class="panel-body">
+    <%= @article.text %>
+  </div>
+</div>
 
 
 <h2>Comments</h2>
@@ -23,9 +21,9 @@
     <%= f.text_area :body %>
   </p>
   <p>
-    <%= f.submit %>
+    <%= f.submit :class => "btn btn-default btn-primary"  %>
   </p>
 <% end %>
 
-<%= link_to 'Edit', edit_article_path(@article) %>
-<%= link_to 'Back', articles_path %>
+<%= link_to 'Edit', edit_article_path(@article),class: "btn btn-info " %>
+<%= link_to 'Back', articles_path , class: "btn btn-default" %>
